--- a/.github/workflows/config-x86-64-builder.yml
+++ b/.github/workflows/config-x86-64-builder.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt-x86-64 Builder
+name: Config-x86-64 Builder
 
 on:
   repository_dispatch:
