--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -37,6 +37,6 @@ jobs:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     - name: 电报通知
-      if: steps.organizer.outputs.status == 'success'
+#      if: steps.organizer.outputs.status == 'success'
       run: |
         curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=我亲爱的✨主人✨：您使用编译的固件顺利编译完成了！💐" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
