--- a/.github/workflows/OpenWrt-x86-64-Builder.yml
+++ b/.github/workflows/OpenWrt-x86-64-Builder.yml
@@ -166,7 +166,7 @@ jobs:
     - name: 电报通知
       if: steps.tag.outputs.status == 'success' && !cancelled()
       run: |
-        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=我亲爱的✨盆友✨：您的固件 ${{ env.DEVICE_NAME }}${{ env.FILE_DATE }} 顺利编译完成了！💐" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=我亲爱的✨盆友✨：您的固件 OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }} 顺利编译完成了！💐" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
     - name: 删除流进程
       uses: Mattraks/delete-workflow-runs@main
